# deprecation-alias

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
deprecation_alias/: __init__.py
doc-source/: Source.rst  conf.py  contributing.rst  index.rst
doc-source/api/: deprecation-alias.rst
tests/: requirements.txt  test_deprecation.py
