[build-system]
requires = [ "hatch-requirements-txt",]
build-backend = "hatchling.build"

[project]
name = "deprecation-alias"
version = "0.4.0"
description = "A wrapper around 'deprecation' providing support for deprecated aliases."
readme = "README.rst"
requires-python = ">=3.6.1"
keywords = [ "deprecation",]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dynamic = [ "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/deprecation-alias"
"Issue Tracker" = "https://github.com/domdfcoding/deprecation-alias/issues"
"Source Code" = "https://github.com/domdfcoding/deprecation-alias"

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"
license-key = "Apache-2.0"
package = "deprecation_alias"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "Apache-2.0"
package = "deprecation_alias"

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "Windows", "macOS", "Linux",]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.hatch.build]
exclude = [
    "/*",
    "!/deprecation_alias",
    "!/deprecation_alias/**/requirements.txt",
    "!/requirements.txt",
    "tests",
    "doc-source",
]

[tool.hatch.build.sdist]
include = [ "deprecation_alias", "requirements.txt",]

[tool.hatch.build.wheel]
include = [ "deprecation_alias",]

[tool.hatch.metadata.hooks.requirements_txt]
files = [ "requirements.txt",]
